tests/showIface/should_fail/THPutDocExternalA.hs
module THPutDocExternalA where

f :: Int
f = 42
